--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Go Pikachu</title>
+    <title class="poke">
+         Let's Go Pikachu
+    </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
-    <header>heade</header>
+    <header>
+        <a href="" class="logo">
+         <img src="./img/poke-bola.png" alt="poke-bola">
+         <span>Pokemon</span>
+        </a>
+    </header>
 
     <main>mani</main>
     
