--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="description__title">
                 Let's Go, Pikachu!
             </h2>
-            <p>Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
+            <p class="description__text">Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
         </div>
 
         <a href="#" class="action">
@@ -44,7 +44,9 @@
         
     </main>
     
-    <footer>Copyright 2022 | Marcelo Gabriel</footer>
+    <footer>
+        Copyright © 2022 | Marcelo Gabriel
+    </footer>
 
 </body>
 
